 mse 2.0
 USER-VISIBLE CHANGES
- genArgs renamed args
- ctrl.mp renamed ctrl
- elements of ctrl.mp don't use ctrl.## anymore

 BUG FIXES
- oem set of dataYears fixed

 mse 1.0
 USER-VISIBLE CHANGES
- metric.phcr, C.obs and C.est added to the tracking matrix
- length.est renamed to mlc.est

 BUG FIXES
- movingF hcr and phcr fied to work with FLPars

 mse 0.9

 USER-VISIBLE CHANGES
- sampling.oem adds min when survey generates 0
- added management and data lags
- new sampling.oem including time of survey
- Complete new code base

 BUG FIXES

 UTILITIES

 DOCUMENTATION

 DEPRECATED & DEFUNCT

 mse 0.0.4

 USER-VISIBLE CHANGES

- Methods moved to FLCore: rnoise, rlnoise